--- a/app/views/console.html
+++ b/app/views/console.html
@@ -67,8 +67,10 @@
       <ul class="off-canvas-list">
         <li><a ui-sref=".table">餐桌类型</a></li>
         <li><a ui-sref=".strategy">等位奖励</a></li>
+        <li><a ui-sref=".exchange">奖励兑换</a></li>
         <li><a ui-sref=".menu">菜单管理</a></li>
         <li><a ui-sref=".restaurant">餐厅配置</a></li>
+
         <li class="divider"></li>
         <li><a ui-sref=".change_passwd">修改密码</a></li>
         <li><a ng-click="logout()">注销</a></li>
