--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -196,12 +196,12 @@ ul.off-canvas-list {
 
   .register-qrcode {
     display: inline-block;
-    width: 200px;
-    height: 200px;
+    width: 300px;
+    height: 300px;
     background-color: $white;
     background-repeat: no-repeat;
     background-size: 100% 100%;
-    margin: 100px 0 50px;
+    margin: 50px 0;
   }
   .register-qrcode + h2{
     margin-bottom: 50px;
