fix display of queue status

--- a/app/views/console_history.html
+++ b/app/views/console_history.html
@@ -18,7 +18,7 @@
         <td>{{ reg.queue_number }}</td>
         <td>{{ reg.create_time }}</td>
         <td>{{ reg.end_time }}</td>
-        <td>{{ reg.status }}</td>
+        <td>{{ reg.status_display }}</td>
     </tr>
     </tbody>
 </table>
