--- a/app/views/console_qrcode.html
+++ b/app/views/console_qrcode.html
@@ -8,7 +8,7 @@
 
 <h4>点菜二维码(贴于餐桌)</h4>
 
-<ul>
+<ul class="menu-qrcode-list">
   <li ng-repeat="item in menu">
     <h5>{{item.table_name}}</h5>
     <div class="normal-qrcode" style="background-image:url('{{cdn_file_url}}/{{item.file_key}}')"></div>
