change icons of console

--- a/app/views/console.html
+++ b/app/views/console.html
@@ -35,14 +35,14 @@
 
       <a class="item" ui-sref=".overview" ui-sref-active="active">
         <i class="fi-volume"></i>
-        <label for="">叫号</label>
+        <label for="">排队</label>
       </a>
       <a class="item" ui-sref=".order" ui-sref-active="active">
-        <i class="fi-graph-trend"></i>
+        <i class="fi-shopping-cart"></i>
         <label for="">点菜</label>
       </a>
       <a class="item" ui-sref=".exchange" ui-sref-active="active">
-        <i class="fi-graph-trend"></i>
+        <i class="fi-ticket"></i>
         <label for="">兑换</label>
       </a>
       <a class="item" ui-sref=".report" ui-sref-active="active">
@@ -55,14 +55,14 @@
     <div class="dk-icon-bar icon-bar three-up show-for-small-only">
       <a class="item" ui-sref=".overview" ui-sref-active="active">
         <i class="fi-volume"></i>
-        <label for="">叫号</label>
+        <label for="">排队</label>
       </a>
       <a class="item" ui-sref=".order" ui-sref-active="active">
-        <i class="fi-clock"></i>
+        <i class="fi-shopping-cart"></i>
         <label for="">点菜</label>
       </a>
       <a class="item" ui-sref=".exchange" ui-sref-active="active">
-        <i class="fi-graph-trend"></i>
+        <i class="fi-ticket"></i>
         <label for="">兑换</label>
       </a>
     </div>
