change icon of queue

--- a/app/views/console.html
+++ b/app/views/console.html
@@ -34,7 +34,7 @@
     <div class="dk-vertical-icon-bar icon-bar vertical three-up hide-for-small-only">
 
       <a class="item" ui-sref=".overview" ui-sref-active="active">
-        <i class="fi-volume"></i>
+        <i class="fi-clock"></i>
         <label for="">排队</label>
       </a>
       <a class="item" ui-sref=".order" ui-sref-active="active">
@@ -54,7 +54,7 @@
 
     <div class="dk-icon-bar icon-bar three-up show-for-small-only">
       <a class="item" ui-sref=".overview" ui-sref-active="active">
-        <i class="fi-volume"></i>
+        <i class="fi-clock"></i>
         <label for="">排队</label>
       </a>
       <a class="item" ui-sref=".order" ui-sref-active="active">
