--- a/app/views/console_order.html
+++ b/app/views/console_order.html
@@ -74,6 +74,11 @@
     <div class="row">
       <div class="small-12 columns">付款时间：{{ table.order.pay_time | order_time }} </div>
     </div>
+    <div class="row">
+      <div class="small-12 columns">
+        <button class="button secondary expand tiny" ng-click="cancel()">关闭</button>
+      </div>
+    </div>
   </div>
 </script>
 
