add polling fetch for table-order page

--- a/app/views/console_order.html
+++ b/app/views/console_order.html
@@ -50,8 +50,8 @@
     <div class="row" ng-show="table.order.status == 0">
       <div class="small-9 columns">
         <div class="button-group">
-          <button class="button" ng-click="confirmOrder(table.order.id)" ng-show="table.order.status == 0">确认菜单</button>
-          <button class="button" ng-click="rejectOrder(table.order.id)"ng-show="table.order.status == 0">取消菜单</button>
+          <button class="button" ng-click="confirmOrder(table.order.id)" ng-show="table.order.status == 0">确认订单</button>
+          <button class="button" ng-click="rejectOrder(table.order.id)"ng-show="table.order.status == 0">退回订单</button>
         </div>
       </div>
     </div>
