remove redirect when selected one table

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -413,7 +413,7 @@ table.current-registration {
         > li {
             display: inline-block;
             vertical-align: bottom;
-            > a {
+            > div {
                 display: table;
                 > span {
                     display: table-cell;
