--- a/app/views/console_order.html
+++ b/app/views/console_order.html
@@ -1,7 +1,7 @@
 <section class="console-order">
   <ul class="tables">
     <li ng-repeat="table in tables">
-      <a href="#" class="button tablet"
+      <div class="button tablet"
         ng-click="table_order(table)"
         ng-class=" table.order_status | table_order_class ">
         <span>
